--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitest/coverage-c8": "^0.29.7",
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.2",
+    "@vueuse/core": "^9.13.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
