--- a/play/package.json
+++ b/play/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "hp-vue-component": "workspace:^0.0.1"
+  }
 }
