--- a/package.json
+++ b/package.json
@@ -6,23 +6,30 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
-    "lint:style": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\""
+    "lint:style": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\"",
+    "build": "pnpm run --filter ./packages/utils build & gulp -f packages/components/script/build/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/gulp": "^4.0.10",
+    "@types/gulp-autoprefixer": "^0.0.33",
+    "@types/gulp-less": "^0.0.32",
+    "@types/node": "^18.15.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitest/coverage-c8": "^0.29.7",
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.2",
-    "@vueuse/core": "^9.13.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-less": "^5.0.0",
     "happy-dom": "^8.9.0",
     "less": "^4.1.3",
     "postcss-html": "^1.5.0",
@@ -34,6 +41,7 @@
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^31.0.0",
     "stylelint-prettier": "^3.0.0",
+    "sucrase": "^3.30.0",
     "typescript": "^5.0.2",
     "unplugin-vue-define-options": "^1.2.4",
     "vite": "^4.2.1",
@@ -42,7 +50,7 @@
     "vue": "^3.2.36"
   },
   "dependencies": {
-    "@hp-vue-component/components": "workspace:^0.0.1",
-    "@hp-vue-component/utils": "workspace:^0.0.1"
+    "@hp-vue-component/utils": "workspace:^0.0.1",
+    "@vueuse/core": "^9.13.0"
   }
 }
