--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@hp-vue-component/utils",
   "version": "0.0.1",
+  "main": "./dist/lib/index.js",
+  "module": "./dist/es/index.js",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
+  "files": [
+    "dist"
+  ],
   "author": "",
-  "license": "ISC"
+  "license": "MIT",
+  "scripts": {
+    "build": "vite build",
+    "release": "release-it"
+  }
 }
