--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "vitest",
     "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
     "lint:style": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\"",
-    "build": "pnpm run --filter ./packages/utils build & gulp -f packages/components/script/build/index.ts"
+    "build": "pnpm run --filter ./packages/utils build & gulp -f packages/components/script/build/index.ts",
+    "dev:play": "pnpm run --filter ./play dev",
+    "coverage:com": "pnpm run --filter ./packages/components coverage"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vitest/coverage-c8": "^0.29.7",
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.2",
